--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A project from the uDemy course",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile-sass": "node-sass ./sass/main.scss ./css/style.css"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/clubdeuce/natours/issues"
   },
-  "homepage": "https://github.com/clubdeuce/natours#readme"
+  "homepage": "https://github.com/clubdeuce/natours#readme",
+  "devDependencies": {
+    "live-server": "^1.2.1",
+    "node-sass": "^4.11.0"
+  }
 }
