--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A project from the uDemy course",
   "main": "index.js",
   "scripts": {
-    "compile-sass": "node-sass ./sass/main.scss ./css/style.css"
+    "compile-sass": "node-sass ./sass/main.scss ./css/style.css -w"
   },
   "repository": {
     "type": "git",
